# onitama-drawtablebot

./: CMakeLists.txt
src/: Board.h  BoardUtil.cpp  Connection.cpp  Connection.h  Game.cpp  Game.h  Main.cpp  MoveTable.h  Search.h  Types.h  board.h  boardEval.hpp  boardIter.hpp  boardSearch.cpp  boardSearch.hpp  boardSearchTools.cpp  boardWin.hpp  card.cpp  card.hpp  connection.cpp  connection.h  easywsclient.cpp  easywsclient.hpp  game.cpp  game.h  gameSearch.cpp  main.cpp  score.cpp  score.h  transpositionTable.cpp  transpositionTable.h  transpositionTable.hpp  types.h  util.h  xoshiro256.h  zobrist.h
src/test/: testBoard.h  testMain.cpp  testMain.h
